--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
-spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost/siscof?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=1234
+#spring.jpa.database=MYSQL
+#spring.datasource.url=jdbc:mysql://localhost/siscof?createDatabaseIfNotExist=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.show-sql=true
+#spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
-
